= 1.0.4 = *	Fixed update button to display in WordPress Blue *	Fixed issue with extra padding displaying in widget area (Thanks to Music Radio Creative for pointing it out!)
git-svn-id: https://plugins.svn.wordpress.org/as-heard-on/trunk@775580 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/as-heard-on-style.css
+++ b/css/as-heard-on-style.css
@@ -1,11 +1,5 @@
 /* CSS for As Heard On */
-#ppg-form label {
-float: left;
-width: 125px;
-font-weight: bold;
-}
-
-div.clear {
+div.aho-clear {
     clear:both;
     min-height: 15px;
 }
@@ -21,14 +15,10 @@ div.clear {
 	float: left;
 }
 
-#icon-ppg-image{
-	background: url ('../podcast_icon.png') no-repeat;
-}
-
 .aho-button {
-	-moz-box-shadow:inset 0px 1px 0px 0px #ffffff;
-	-webkit-box-shadow:inset 0px 1px 0px 0px #ffffff;
-	box-shadow:inset 0px 1px 0px 0px #ffffff;
+	-moz-box-shadow:inset 0 1px 0 0 #ffffff;
+	-webkit-box-shadow:inset 0 1px 0 0 #ffffff;
+	box-shadow:inset 0 1px 0 0 #ffffff;
 	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #ededed), color-stop(1, #dfdfdf) );
 	background:-moz-linear-gradient( center top, #ededed 5%, #dfdfdf 100% );
 	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ededed', endColorstr='#dfdfdf');
@@ -42,32 +32,23 @@ div.clear {
 	font-size:15px;
 	padding:6px 24px;
 	text-decoration:none;
-	text-shadow:1px 1px 0px #ffffff;
+	text-shadow:1px 1px 0 #ffffff;
 }
 .aho-button:hover {
 	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #dfdfdf), color-stop(1, #ededed) );
 	background:-moz-linear-gradient( center top, #dfdfdf 5%, #ededed 100% );
 	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#dfdfdf', endColorstr='#ededed');
 	background-color:#dfdfdf;
-}.aho-button:active {
+}
+.aho-button:active {
 	position:relative;
 	top:1px;
 }
 /* This imageless css button was generated by CSSButtonGenerator.com */
 
-/*.img_wrapper {
-	padding: 10px !important;
-}*/
-
 .item img{
     display: inline-block;
     padding:0 15px 15px 0;
 }
- 
-.img_wrapper img{
-    /*position: absolute;
-    top: 0;*/
-    /*width: 100%;*/
-    /*opacity: 0;*/
-    padding-bottom: 25px;
-}
+
+.img_wrapper img{ /*border: 1px solid #000;*/}
